# pre-built-binary-in-cmake

./: CMakeLists.txt  main.cpp
